--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Parse Typescript files and retrieve a synthetic description of defined types and variables",
 	"main": "library/index.js",
 	"scripts": {
-		"test": "esrun test",
+		"test": "esrun --watch test",
 		"check": "tsc --noEmit",
 		"build": "tsc-esm"
 	},
@@ -29,7 +29,7 @@
 		"typescript": "^4.2.4"
 	},
 	"devDependencies": {
-		"@digitak/esrun": "^1.1.3",
+		"@digitak/esrun": "^1.2.1",
 		"@digitak/tsc-esm": "^1.0.3"
 	}
 }
