--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"dev": "esrun --watch:source/**/*.ts,test/**/*.ts test",
 		"test": "esrun test",
-		"test:inspect": "esrun --inspect test",
+		"inspect": "esrun --inspect test",
 		"check": "tsc --noEmit",
 		"build": "tsc-esm"
 	},
