--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "esrun --watch:source/**/*.ts,test/**/*.ts test",
 		"test": "esrun test",
 		"inspect": "esrun --inspect test",
-		"check": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
 		"build": "tsc-esm"
 	},
 	"repository": {
@@ -33,10 +33,11 @@
 		"typescript": "^4.2.4"
 	},
 	"devDependencies": {
-		"@digitak/esrun": "^1.2.7",
-		"@digitak/tsc-esm": "^1.0.3",
+		"@digitak/esrun": "^2.0.5",
+		"@digitak/tsc-esm": "^2.0.3",
 		"cute-print": "^1.0.4",
 		"ts-json-schema-generator": "^0.96.0",
+		"ts-to-zod": "^1.7.0",
 		"typescript-json-schema": "^0.51.0"
 	}
 }
