🧪 First validator test pass

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"homepage": "https://github.com/digital-loukoum/typezer#readme",
 	"dependencies": {
 		"chokidar": "^3.5.3",
+		"fast-glob": "^3.2.11",
 		"typescript": "^4.5"
 	},
 	"devDependencies": {
