--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"dependencies": {
 		"chokidar": "^3.5.3",
 		"fast-glob": "^3.2.11",
+		"tosource": "^2.0.0-alpha.3",
 		"typescript": "^4.5"
 	},
 	"devDependencies": {
