--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
 	"version": "0.9.0",
 	"description": "Parse Typescript files to get a synthetic description of defined types and variables",
 	"type": "module",
-	"main": "library/index.js",
+	"files": [
+		"library"
+	],
+	"exports": {
+		".": "./library/index.js",
+		"./*": "./library/*.js"
+	},
 	"scripts": {
 		"dev": "esrun --watch:source/**/*.ts,test/**/*.ts test",
 		"test": "esrun test",
 		"inspect": "esrun --inspect test/inspect",
 		"watch": "esrun --inspect test/watch",
 		"check": "tsc --noEmit --watch",
-		"build": "tsc-esm"
+		"build": "esrun scripts/build",
+		"deploy": "esrun scripts/deploy"
 	},
 	"repository": {
 		"type": "git",
@@ -39,7 +46,7 @@
 	},
 	"devDependencies": {
 		"@digitak/esrun": "^3.0.2",
-		"@digitak/tsc-esm": "^2.0.3",
+		"@digitak/tsc-esm": "^3.1.2",
 		"@types/node": "^15.6.1",
 		"fartest": "^2.1.8"
 	}
