--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"strict": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
-		"outDir": "library",
+		"outDir": "package",
 		"declaration": true
 	},
 	"include": ["source"]
