--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"outDir": "package",
-		"declaration": true
+		"declaration": true,
+		"sourceMap": true
 	},
 	"include": ["source"]
 }
