--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
 		"@types/micromatch": "^4.0.2",
 		"chokidar": "^3.5.3",
 		"fast-glob": "^3.2.11",
-		"micromatch": "^4.0.4"
+		"micromatch": "^4.0.4",
+		"typescript": "^4.7.0-dev.20220408"
 	},
 	"devDependencies": {
 		"@digitak/esrun": "^3.0.2",
 		"@digitak/tsc-esm": "^3.1.2",
 		"@types/node": "^15.6.1",
-		"fartest": "^2.1.8",
-		"typescript": "^4.7.0-dev.20220408"
+		"fartest": "^2.1.8"
 	}
 }
