--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"chokidar": "^3.5.3",
 		"fast-glob": "^3.2.11",
 		"micromatch": "^4.0.4",
-		"typescript": "^4.7.0-dev.20220408"
+		"typescript": "^4.7.2"
 	},
 	"devDependencies": {
 		"@digitak/esrun": "^3.0.2",
